concord_macros/tests/dsl/fail/fail_raw_secret_exposure_secret_method_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client RawSecretExposureSecretMethodPolicyApi {
        base "https://example.com"
    }

    GET Ping(token: SecretString)
    path ["ping"]
    header "X-Leak" = token.r#expose_secret()
    -> Text<String>
}

fn main() {}
